fix overflow on admin page

--- a/website/assets/css/custom.css
+++ b/website/assets/css/custom.css
@@ -1310,4 +1310,7 @@ time.human {
     list-style-type: initial;
 }
 
+.collection-incidents {
+    overflow: visible;
+}
 
